--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bootstrap": "^5.3.2",
+    "react-axios": "^2.0.6",
+    "react-bootstrap": "^2.10.0",
+    "react-router-dom": "^6.21.3"
   }
 }
