--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^5.3.2",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-router-dom": "^6.21.3"
   }
 }
